name:                book
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/book#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable hello-world
  hs-source-dirs:      src
  main-is:             HelloWorld.hs
  default-language:    Haskell2010
  ghc-options:         -main-is HelloWorld
  build-depends:       base >= 4.7 && < 5
                     , yesod


-- executable json
--   hs-source-dirs:      src
--   main-is:             Json.hs
--   default-language:    Haskell2010
--   ghc-options:         -main-is Json
--   build-depends:       base >= 4.7 && < 5
--                      , yesod

executable shakpear
  hs-source-dirs:      src
  main-is:             Shakpear.hs
  default-language:    Haskell2010
  ghc-options:         -main-is Shakpear
  build-depends:       base >= 4.7 && < 5
                     , yesod
                     , shakespeare
                     , blaze-html

executable shakespear-routes
  hs-source-dirs:      src
  main-is:             ShakespearRoutes.hs
  default-language:    Haskell2010
  ghc-options:         -main-is ShakespearRoutes
  build-depends:       base >= 4.7 && < 5
                     , yesod
                     , shakespeare
                     , blaze-html
                     , text

executable shakespear-routes-params
  hs-source-dirs:      src
  main-is:             ShakespearRoutesParams.hs
  default-language:    Haskell2010
  ghc-options:         -main-is ShakespearRoutesParams
  build-depends:       base >= 4.7 && < 5
                     , yesod
                     , shakespeare
                     , blaze-html
                     , blaze-builder
                     , text
                     , http-types

executable widget
  hs-source-dirs:      src
  main-is:             Widget.hs
  default-language:    Haskell2010
  ghc-options:         -main-is Widget
  build-depends:       base >= 4.7 && < 5
                     , yesod

executable default-layout
  hs-source-dirs:      src
  main-is:             DefaultLayout.hs
  default-language:    Haskell2010
  ghc-options:         -main-is DefaultLayout
  build-depends:       base >= 4.7 && < 5
                     , yesod

executable argument-routes
  hs-source-dirs:      src
  main-is:             ArgumentRoutes.hs
  default-language:    Haskell2010
  ghc-options:         -main-is ArgumentRoutes
  build-depends:       base >= 4.7 && < 5
                     , yesod
                     , text

executable logger
  hs-source-dirs:      src
  main-is:             Logger.hs
  default-language:    Haskell2010
  ghc-options:         -main-is Logger
  build-depends:       base >= 4.7 && < 5
                     , yesod

executable form
  hs-source-dirs:      src
  main-is:             Form.hs
  default-language:    Haskell2010
  ghc-options:         -main-is Form
  build-depends:       base >= 4.7 && < 5
                     , yesod
                     , text
                     , yesod-form
                     , time

executable mform
  hs-source-dirs:      src
  main-is:             MForm.hs
  default-language:    Haskell2010
  ghc-options:         -main-is MForm
  build-depends:       base >= 4.7 && < 5
                     , yesod
                     , text

executable iform
  hs-source-dirs:      src
  main-is:             IForm.hs
  default-language:    Haskell2010
  ghc-options:         -main-is IForm
  build-depends:       base >= 4.7 && < 5
                     , yesod
                     , text